--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bootstrap-vue": "^2.14.0",
     "node-sass": "^4.14.1",
     "nuxt": "^2.0.0",
+    "nuxt-facebook-pixel-module": "^1.3.0",
     "sass-loader": "^8.0.2",
     "vue-scrollto": "^2.18.1"
   },
